# algoritmit-ja-tekoalyharjoitustuo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
dokumentaatio/: maarittelydokumentit.md  maarittelydokumentti  testausdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md
src/: ai.py  game2048.py  gameloop.py  ui.py
src/tests/: ai_test.py  game_test.py  loop_test.py
viikkoraportit/: Viikkoraportti1
