[tool.poetry]
name = "algo-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Dodo <dodoloksttrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
autopep8 = "^2.3.2"
pytest = "^8.4.2"
coverage = "^7.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
